collapse query down to object. add some default handling

--- a/Rest.Sql/packages.config
+++ b/Rest.Sql/packages.config
@@ -4,5 +4,6 @@
   <package id="jQuery.vsdoc" version="1.6" />
   <package id="Massive" version="1.1" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
+  <package id="Newtonsoft.Json" version="4.0.8" />
   <package id="WebActivator" version="1.5" />
 </packages>
